--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,7 @@
-gunicorn
 asgiref==3.8.1
-Django==5.0.7
-django-cors-headers==4.4.0
-djangorestframework==3.15.2
-djangorestframework-simplejwt==5.3.1
-mysqlclient==2.2.4
-pillow==10.4.0
-psycopg2==2.9.9
-psycopg2-binary==2.9.9
-PyJWT==2.9.0
-python-dotenv==1.0.1
-pytz==2024.2
-sqlparse==0.5.1
-tzdata==2024.1
+dj-database-url==2.3.0
+Django==5.2
+psycopg2-binary==2.9.10
+sqlparse==0.5.3
+typing_extensions==4.13.1
+tzdata==2025.2
